# ai-control-plane

./: .gitignore  CHEATSHEET.md  Dockerfile  PRESENTATION.md  README.md  SHEET.md  pyproject.toml
.github/workflows/: ci.yml
control_plane/: __init__.py  api.py  cli.py  extractors.py  mcp_server.py  observability.py  paths.py  pipeline.py  policies.py  retrieval.py  schemas.py  security.py  validation.py
control_plane/static/: index.html
data/golden/: cases.yaml  report.json
data/knowledge/: caps_catalog.json  makeup_catalog.json  steel_grades.json  steel_specs.json
docs/: ARCHITECTURE.md
tests/: test_api.py  test_control_plane.py
