[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "stratisell-ai-control-plane"
version = "0.1.0"
description = "Multi-tenant AI control plane: unstructured business requests → validated actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
llm = ["openai>=1.30"]
dev = ["pytest>=8.0"]

[project.scripts]
aicp = "control_plane.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["control_plane*"]
